# odzip

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.bak  README.md  bitstream.c  bitstream.h  compress.c  decompress.c  huffman.c  huffman.h  lz_hashchain.c  lz_matcher.h  lz_tables.h  main.c  odz.c  odz.h  odz_util.c
.github/workflows/: cmake-single-platform.yml  release.yml
